// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex link formatter wing snapshot 1`] = `
"# construct-library

This is a test project to make sure the \`jsii-docgen\` cli property renders API documentation
for construct libraries.
# API Reference <a name=\\"API Reference\\" id=\\"api-reference\\"></a>

## Resources <a name=\\"Resources\\" id=\\"Resources\\"></a>

### GreeterBucket <a name=\\"GreeterBucket\\" id=\\"GreeterBucket\\"></a>

#### Initializer <a name=\\"Initializer\\" id=\\"GreeterBucket.Initializer\\"></a>

\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

new GreeterBucket(props?: BucketProps)
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>props</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/BucketProps?lang=python\\">BucketProps</a></code> | *No description.* |

---

#### Methods <a name=\\"Methods\\" id=\\"Methods\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>applyRemovalPolicy</code> | Apply the given removal policy to this resource. |
| <code>addEventNotification</code> | Adds a bucket notification event destination. |
| <code>addObjectCreatedNotification</code> | Subscribes a destination to receive notifications when an object is created in the bucket. |
| <code>addObjectRemovedNotification</code> | Subscribes a destination to receive notifications when an object is removed from the bucket. |
| <code>addToResourcePolicy</code> | Adds a statement to the resource policy for a principal (i.e. account/role/service) to perform actions on this bucket and/or its contents. Use \`bucketArn\` and \`arnForObjects(keys)\` to obtain ARNs for this bucket or objects. |
| <code>arnForObjects</code> | Returns an ARN that represents all objects within the bucket that match the key pattern specified. |
| <code>grantDelete</code> | Grants s3:DeleteObject* permission to an IAM principal for objects in this bucket. |
| <code>grantPublicAccess</code> | Allows unrestricted access to objects from this bucket. |
| <code>grantPut</code> | Grants s3:PutObject* and s3:Abort* permissions for this bucket to an IAM principal. |
| <code>grantPutAcl</code> | Grant the given IAM identity permissions to modify the ACLs of objects in the given Bucket. |
| <code>grantRead</code> | Grant read permissions for this bucket and it's contents to an IAM principal (Role/Group/User). |
| <code>grantReadWrite</code> | Grants read/write permissions for this bucket and it's contents to an IAM principal (Role/Group/User). |
| <code>grantWrite</code> | Grant write permissions to this bucket to an IAM principal. |
| <code>onCloudTrailEvent</code> | Define a CloudWatch event that triggers when something happens to this repository. |
| <code>onCloudTrailPutObject</code> | Defines an AWS CloudWatch event that triggers when an object is uploaded to the specified paths (keys) in this bucket using the PutObject API call. |
| <code>onCloudTrailWriteObject</code> | Defines an AWS CloudWatch event that triggers when an object at the specified paths (keys) in this bucket are written to. |
| <code>s3UrlForObject</code> | The S3 URL of an S3 object. For example:. |
| <code>transferAccelerationUrlForObject</code> | The https Transfer Acceleration URL of an S3 object. |
| <code>urlForObject</code> | The https URL of an S3 object. Specify \`regional: false\` at the options for non-regional URLs. For example:. |
| <code>virtualHostedUrlForObject</code> | The virtual hosted-style URL of an S3 object. Specify \`regional: false\` at the options for non-regional URL. For example:. |
| <code>addCorsRule</code> | Adds a cross-origin access configuration for objects in an Amazon S3 bucket. |
| <code>addInventory</code> | Add an inventory configuration. |
| <code>addLifecycleRule</code> | Add a lifecycle rule to the bucket. |
| <code>addMetric</code> | Adds a metrics configuration for the CloudWatch request metrics from the bucket. |
| <code>greet</code> | *No description.* |

---

**<code>applyRemovalPolicy</code>**
\`\`\`wing
applyRemovalPolicy(policy: RemovalPolicy): void
\`\`\`

Apply the given removal policy to this resource.

The Removal Policy controls what happens to this resource when it stops
being managed by CloudFormation, either because you've removed it from the
CDK application or because you've made a change that requires the resource
to be replaced.

The resource can be deleted (\`RemovalPolicy.DESTROY\`), or left in your AWS
account for data recovery and cleanup later (\`RemovalPolicy.RETAIN\`).

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>policy</code> | <code><a href=\\"/packages/@aws-cdk/core/v/99.99.99/api/RemovalPolicy?lang=python\\">RemovalPolicy</a></code> | *No description.* |

**<code>addEventNotification</code>**
\`\`\`wing
addEventNotification(event: EventType, dest: IBucketNotificationDestination, filters: NotificationKeyFilter): void
\`\`\`

Adds a bucket notification event destination.

> [https://docs.aws.amazon.com/AmazonS3/latest/dev/NotificationHowTo.html](https://docs.aws.amazon.com/AmazonS3/latest/dev/NotificationHowTo.html)

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>event</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/EventType?lang=python\\">EventType</a></code> | The event to trigger the notification. |
| <code>dest</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/IBucketNotificationDestination?lang=python\\">IBucketNotificationDestination</a></code> | The notification destination (Lambda, SNS Topic or SQS Queue). |
| <code>filters</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/NotificationKeyFilter?lang=python\\">NotificationKeyFilter</a></code> | S3 object key filter rules to determine which objects trigger this event. |

*Example*

\`\`\`wing
   declare const myLambda: lambda.Function;
   const bucket = new s3.Bucket(this, 'MyBucket');
   bucket.addEventNotification(s3.EventType.OBJECT_CREATED, new s3n.LambdaDestination(myLambda), {prefix: 'home/myusername/*'});
\`\`\`


**<code>addObjectCreatedNotification</code>**
\`\`\`wing
addObjectCreatedNotification(dest: IBucketNotificationDestination, filters: NotificationKeyFilter): void
\`\`\`

Subscribes a destination to receive notifications when an object is created in the bucket.

This is identical to calling
\`onEvent(EventType.OBJECT_CREATED)\`.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>dest</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/IBucketNotificationDestination?lang=python\\">IBucketNotificationDestination</a></code> | The notification destination (see onEvent). |
| <code>filters</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/NotificationKeyFilter?lang=python\\">NotificationKeyFilter</a></code> | Filters (see onEvent). |

**<code>addObjectRemovedNotification</code>**
\`\`\`wing
addObjectRemovedNotification(dest: IBucketNotificationDestination, filters: NotificationKeyFilter): void
\`\`\`

Subscribes a destination to receive notifications when an object is removed from the bucket.

This is identical to calling
\`onEvent(EventType.OBJECT_REMOVED)\`.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>dest</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/IBucketNotificationDestination?lang=python\\">IBucketNotificationDestination</a></code> | The notification destination (see onEvent). |
| <code>filters</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/NotificationKeyFilter?lang=python\\">NotificationKeyFilter</a></code> | Filters (see onEvent). |

**<code>addToResourcePolicy</code>**
\`\`\`wing
addToResourcePolicy(permission: PolicyStatement): AddToResourcePolicyResult
\`\`\`

Adds a statement to the resource policy for a principal (i.e. account/role/service) to perform actions on this bucket and/or its contents. Use \`bucketArn\` and \`arnForObjects(keys)\` to obtain ARNs for this bucket or objects.

Note that the policy statement may or may not be added to the policy.
For example, when an \`IBucket\` is created from an existing bucket,
it's not possible to tell whether the bucket already has a policy
attached, let alone to re-use that policy to add more statements to it.
So it's safest to do nothing in these cases.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>permission</code> | <code><a href=\\"/packages/@aws-cdk/aws-iam/v/99.99.99/api/PolicyStatement?lang=python\\">PolicyStatement</a></code> | the policy statement to be added to the bucket's policy. |

**<code>arnForObjects</code>**
\`\`\`wing
arnForObjects(keyPattern: str): str
\`\`\`

Returns an ARN that represents all objects within the bucket that match the key pattern specified.

To represent all keys, specify \`\`\\"*\\"\`\`.

If you need to specify a keyPattern with multiple components, concatenate them into a single string, e.g.:

   arnForObjects(\`home/\${team}/\${user}/*\`)

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>keyPattern</code> | <code>str</code> | *No description.* |

**<code>grantDelete</code>**
\`\`\`wing
grantDelete(identity: IGrantable, objectsKeyPattern?: any): Grant
\`\`\`

Grants s3:DeleteObject* permission to an IAM principal for objects in this bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"/packages/@aws-cdk/aws-iam/v/99.99.99/api/IGrantable?lang=python\\">IGrantable</a></code> | The principal. |
| <code>objectsKeyPattern</code> | <code>any</code> | Restrict the permission to a certain key pattern (default '*'). |

**<code>grantPublicAccess</code>**
\`\`\`wing
grantPublicAccess(allowedActions: str, keyPrefix?: str): Grant
\`\`\`

Allows unrestricted access to objects from this bucket.

IMPORTANT: This permission allows anyone to perform actions on S3 objects
in this bucket, which is useful for when you configure your bucket as a
website and want everyone to be able to read objects in the bucket without
needing to authenticate.

Without arguments, this method will grant read (\\"s3:GetObject\\") access to
all objects (\\"*\\") in the bucket.

The method returns the \`iam.Grant\` object, which can then be modified
as needed. For example, you can add a condition that will restrict access only
to an IPv4 range like this:

     const grant = bucket.grantPublicAccess();
     grant.resourceStatement!.addCondition(‘IpAddress’, { “aws:SourceIp”: “54.240.143.0/24” });

Note that if this \`IBucket\` refers to an existing bucket, possibly not
managed by CloudFormation, this method will have no effect, since it's
impossible to modify the policy of an existing bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>allowedActions</code> | <code>str</code> | the set of S3 actions to allow. |
| <code>keyPrefix</code> | <code>str</code> | the prefix of S3 object keys (e.g. \`home/*\`). Default is \\"*\\". |

**<code>grantPut</code>**
\`\`\`wing
grantPut(identity: IGrantable, objectsKeyPattern?: any): Grant
\`\`\`

Grants s3:PutObject* and s3:Abort* permissions for this bucket to an IAM principal.

If encryption is used, permission to use the key to encrypt the contents
of written files will also be granted to the same principal.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"/packages/@aws-cdk/aws-iam/v/99.99.99/api/IGrantable?lang=python\\">IGrantable</a></code> | The principal. |
| <code>objectsKeyPattern</code> | <code>any</code> | Restrict the permission to a certain key pattern (default '*'). |

**<code>grantPutAcl</code>**
\`\`\`wing
grantPutAcl(identity: IGrantable, objectsKeyPattern?: str): Grant
\`\`\`

Grant the given IAM identity permissions to modify the ACLs of objects in the given Bucket.

If your application has the '@aws-cdk/aws-s3:grantWriteWithoutAcl' feature flag set,
calling {@link grantWrite} or {@link grantReadWrite} no longer grants permissions to modify the ACLs of the objects;
in this case, if you need to modify object ACLs, call this method explicitly.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"/packages/@aws-cdk/aws-iam/v/99.99.99/api/IGrantable?lang=python\\">IGrantable</a></code> | *No description.* |
| <code>objectsKeyPattern</code> | <code>str</code> | *No description.* |

**<code>grantRead</code>**
\`\`\`wing
grantRead(identity: IGrantable, objectsKeyPattern?: any): Grant
\`\`\`

Grant read permissions for this bucket and it's contents to an IAM principal (Role/Group/User).

If encryption is used, permission to use the key to decrypt the contents
of the bucket will also be granted to the same principal.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"/packages/@aws-cdk/aws-iam/v/99.99.99/api/IGrantable?lang=python\\">IGrantable</a></code> | The principal. |
| <code>objectsKeyPattern</code> | <code>any</code> | Restrict the permission to a certain key pattern (default '*'). |

**<code>grantReadWrite</code>**
\`\`\`wing
grantReadWrite(identity: IGrantable, objectsKeyPattern?: any): Grant
\`\`\`

Grants read/write permissions for this bucket and it's contents to an IAM principal (Role/Group/User).

If an encryption key is used, permission to use the key for
encrypt/decrypt will also be granted.

Before CDK version 1.85.0, this method granted the \`s3:PutObject*\` permission that included \`s3:PutObjectAcl\`,
which could be used to grant read/write object access to IAM principals in other accounts.
If you want to get rid of that behavior, update your CDK version to 1.85.0 or later,
and make sure the \`@aws-cdk/aws-s3:grantWriteWithoutAcl\` feature flag is set to \`true\`
in the \`context\` key of your cdk.json file.
If you've already updated, but still need the principal to have permissions to modify the ACLs,
use the {@link grantPutAcl} method.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"/packages/@aws-cdk/aws-iam/v/99.99.99/api/IGrantable?lang=python\\">IGrantable</a></code> | *No description.* |
| <code>objectsKeyPattern</code> | <code>any</code> | *No description.* |

**<code>grantWrite</code>**
\`\`\`wing
grantWrite(identity: IGrantable, objectsKeyPattern?: any): Grant
\`\`\`

Grant write permissions to this bucket to an IAM principal.

If encryption is used, permission to use the key to encrypt the contents
of written files will also be granted to the same principal.

Before CDK version 1.85.0, this method granted the \`s3:PutObject*\` permission that included \`s3:PutObjectAcl\`,
which could be used to grant read/write object access to IAM principals in other accounts.
If you want to get rid of that behavior, update your CDK version to 1.85.0 or later,
and make sure the \`@aws-cdk/aws-s3:grantWriteWithoutAcl\` feature flag is set to \`true\`
in the \`context\` key of your cdk.json file.
If you've already updated, but still need the principal to have permissions to modify the ACLs,
use the {@link grantPutAcl} method.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"/packages/@aws-cdk/aws-iam/v/99.99.99/api/IGrantable?lang=python\\">IGrantable</a></code> | *No description.* |
| <code>objectsKeyPattern</code> | <code>any</code> | *No description.* |

**<code>onCloudTrailEvent</code>**
\`\`\`wing
onCloudTrailEvent(options?: OnCloudTrailBucketEventOptions): Rule
\`\`\`

Define a CloudWatch event that triggers when something happens to this repository.

Requires that there exists at least one CloudTrail Trail in your account
that captures the event. This method will not create the Trail.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>options</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/OnCloudTrailBucketEventOptions?lang=python\\">OnCloudTrailBucketEventOptions</a></code> | Options for adding the rule. |

**<code>onCloudTrailPutObject</code>**
\`\`\`wing
onCloudTrailPutObject(options?: OnCloudTrailBucketEventOptions): Rule
\`\`\`

Defines an AWS CloudWatch event that triggers when an object is uploaded to the specified paths (keys) in this bucket using the PutObject API call.

Note that some tools like \`aws s3 cp\` will automatically use either
PutObject or the multipart upload API depending on the file size,
so using \`onCloudTrailWriteObject\` may be preferable.

Requires that there exists at least one CloudTrail Trail in your account
that captures the event. This method will not create the Trail.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>options</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/OnCloudTrailBucketEventOptions?lang=python\\">OnCloudTrailBucketEventOptions</a></code> | Options for adding the rule. |

**<code>onCloudTrailWriteObject</code>**
\`\`\`wing
onCloudTrailWriteObject(options?: OnCloudTrailBucketEventOptions): Rule
\`\`\`

Defines an AWS CloudWatch event that triggers when an object at the specified paths (keys) in this bucket are written to.

This includes
the events PutObject, CopyObject, and CompleteMultipartUpload.

Note that some tools like \`aws s3 cp\` will automatically use either
PutObject or the multipart upload API depending on the file size,
so using this method may be preferable to \`onCloudTrailPutObject\`.

Requires that there exists at least one CloudTrail Trail in your account
that captures the event. This method will not create the Trail.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>options</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/OnCloudTrailBucketEventOptions?lang=python\\">OnCloudTrailBucketEventOptions</a></code> | Options for adding the rule. |

**<code>s3UrlForObject</code>**
\`\`\`wing
s3UrlForObject(key?: str): str
\`\`\`

The S3 URL of an S3 object. For example:.

\`s3://onlybucket\`
- \`s3://bucket/key\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>key</code> | <code>str</code> | The S3 key of the object. |

**<code>transferAccelerationUrlForObject</code>**
\`\`\`wing
transferAccelerationUrlForObject(key?: str, options?: TransferAccelerationUrlOptions): str
\`\`\`

The https Transfer Acceleration URL of an S3 object.

Specify \`dualStack: true\` at the options
for dual-stack endpoint (connect to the bucket over IPv6). For example:

- \`https://bucket.s3-accelerate.amazonaws.com\`
- \`https://bucket.s3-accelerate.amazonaws.com/key\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>key</code> | <code>str</code> | The S3 key of the object. |
| <code>options</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/TransferAccelerationUrlOptions?lang=python\\">TransferAccelerationUrlOptions</a></code> | Options for generating URL. |

**<code>urlForObject</code>**
\`\`\`wing
urlForObject(key?: str): str
\`\`\`

The https URL of an S3 object. Specify \`regional: false\` at the options for non-regional URLs. For example:.

\`https://s3.us-west-1.amazonaws.com/onlybucket\`
- \`https://s3.us-west-1.amazonaws.com/bucket/key\`
- \`https://s3.cn-north-1.amazonaws.com.cn/china-bucket/mykey\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>key</code> | <code>str</code> | The S3 key of the object. |

**<code>virtualHostedUrlForObject</code>**
\`\`\`wing
virtualHostedUrlForObject(key?: str, options?: VirtualHostedStyleUrlOptions): str
\`\`\`

The virtual hosted-style URL of an S3 object. Specify \`regional: false\` at the options for non-regional URL. For example:.

\`https://only-bucket.s3.us-west-1.amazonaws.com\`
- \`https://bucket.s3.us-west-1.amazonaws.com/key\`
- \`https://bucket.s3.amazonaws.com/key\`
- \`https://china-bucket.s3.cn-north-1.amazonaws.com.cn/mykey\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>key</code> | <code>str</code> | The S3 key of the object. |
| <code>options</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/VirtualHostedStyleUrlOptions?lang=python\\">VirtualHostedStyleUrlOptions</a></code> | Options for generating URL. |

**<code>addCorsRule</code>**
\`\`\`wing
addCorsRule(rule: CorsRule): void
\`\`\`

Adds a cross-origin access configuration for objects in an Amazon S3 bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>rule</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/CorsRule?lang=python\\">CorsRule</a></code> | The CORS configuration rule to add. |

**<code>addInventory</code>**
\`\`\`wing
addInventory(inventory: Inventory): void
\`\`\`

Add an inventory configuration.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>inventory</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/Inventory?lang=python\\">Inventory</a></code> | configuration to add. |

**<code>addLifecycleRule</code>**
\`\`\`wing
addLifecycleRule(rule: LifecycleRule): void
\`\`\`

Add a lifecycle rule to the bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>rule</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/LifecycleRule?lang=python\\">LifecycleRule</a></code> | The rule to add. |

**<code>addMetric</code>**
\`\`\`wing
addMetric(metric: BucketMetrics): void
\`\`\`

Adds a metrics configuration for the CloudWatch request metrics from the bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>metric</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/BucketMetrics?lang=python\\">BucketMetrics</a></code> | The metric configuration to add. |

**<code>greet</code>**
\`\`\`wing
greet(): void
\`\`\`

#### Static Methods <a name=\\"Static Methods\\" id=\\"Static Methods\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>isResource</code> | Check whether the given construct is a Resource. |
| <code>fromBucketArn</code> | *No description.* |
| <code>fromBucketAttributes</code> | Creates a Bucket construct that represents an external bucket. |
| <code>fromBucketName</code> | *No description.* |
| <code>validateBucketName</code> | Thrown an exception if the given bucket name is not valid. |

---

**<code>isResource</code>**
\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

GreeterBucket.isResource(construct: IConstruct)
\`\`\`

Check whether the given construct is a Resource.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>construct</code> | <code><a href=\\"/packages/@aws-cdk/core/v/99.99.99/api/IConstruct?lang=python\\">IConstruct</a></code> | *No description.* |

**<code>fromBucketArn</code>**
\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

GreeterBucket.fromBucketArn(bucketArn: str)
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>bucketArn</code> | <code>str</code> | *No description.* |

**<code>fromBucketAttributes</code>**
\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

GreeterBucket.fromBucketAttributes(attrs: BucketAttributes)
\`\`\`

Creates a Bucket construct that represents an external bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>attrs</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/BucketAttributes?lang=python\\">BucketAttributes</a></code> | A \`BucketAttributes\` object. |

**<code>fromBucketName</code>**
\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

GreeterBucket.fromBucketName(bucketName: str)
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>bucketName</code> | <code>str</code> | *No description.* |

**<code>validateBucketName</code>**
\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

GreeterBucket.validateBucketName(physicalName: str)
\`\`\`

Thrown an exception if the given bucket name is not valid.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>physicalName</code> | <code>str</code> | name of the bucket. |

#### Properties <a name=\\"Properties\\" id=\\"Properties\\"></a>

| **Property** | **Type** | **Description** |
| --- | --- | --- |
| <code>node</code> | <code><a href=\\"/packages/@aws-cdk/core/v/99.99.99/api/ConstructNode?lang=python\\">ConstructNode</a></code> | The construct tree node associated with this construct. |
| <code>env</code> | <code><a href=\\"/packages/@aws-cdk/core/v/99.99.99/api/ResourceEnvironment?lang=python\\">ResourceEnvironment</a></code> | The environment this resource belongs to. |
| <code>stack</code> | <code><a href=\\"/packages/@aws-cdk/core/v/99.99.99/api/Stack?lang=python\\">Stack</a></code> | The stack in which this resource is defined. |
| <code>bucketArn</code> | <code>str</code> | The ARN of the bucket. |
| <code>bucketDomainName</code> | <code>str</code> | The IPv4 DNS name of the specified bucket. |
| <code>bucketDualStackDomainName</code> | <code>str</code> | The IPv6 DNS name of the specified bucket. |
| <code>bucketName</code> | <code>str</code> | The name of the bucket. |
| <code>bucketRegionalDomainName</code> | <code>str</code> | The regional domain name of the specified bucket. |
| <code>bucketWebsiteDomainName</code> | <code>str</code> | The Domain name of the static website. |
| <code>bucketWebsiteUrl</code> | <code>str</code> | The URL of the static website. |
| <code>encryptionKey</code> | <code><a href=\\"/packages/@aws-cdk/aws-kms/v/99.99.99/api/IKey?lang=python\\">IKey</a></code> | Optional KMS encryption key associated with this bucket. |
| <code>isWebsite</code> | <code>bool</code> | If this bucket has been configured for static website hosting. |
| <code>policy</code> | <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/BucketPolicy?lang=python\\">BucketPolicy</a></code> | The resource policy associated with this bucket. |

---

**<code>node</code>**
\`\`\`wing
node: ConstructNode;
\`\`\`

- *Type:* <code><a href=\\"/packages/@aws-cdk/core/v/99.99.99/api/ConstructNode?lang=python\\">ConstructNode</a></code>

The construct tree node associated with this construct.

---

**<code>env</code>**
\`\`\`wing
env: ResourceEnvironment;
\`\`\`

- *Type:* <code><a href=\\"/packages/@aws-cdk/core/v/99.99.99/api/ResourceEnvironment?lang=python\\">ResourceEnvironment</a></code>

The environment this resource belongs to.

For resources that are created and managed by the CDK
(generally, those created by creating new class instances like Role, Bucket, etc.),
this is always the same as the environment of the stack they belong to;
however, for imported resources
(those obtained from static methods like fromRoleArn, fromBucketName, etc.),
that might be different than the stack they were imported into.

---

**<code>stack</code>**
\`\`\`wing
stack: Stack;
\`\`\`

- *Type:* <code><a href=\\"/packages/@aws-cdk/core/v/99.99.99/api/Stack?lang=python\\">Stack</a></code>

The stack in which this resource is defined.

---

**<code>bucketArn</code>**
\`\`\`wing
bucketArn: str;
\`\`\`

- *Type:* <code>str</code>

The ARN of the bucket.

---

**<code>bucketDomainName</code>**
\`\`\`wing
bucketDomainName: str;
\`\`\`

- *Type:* <code>str</code>

The IPv4 DNS name of the specified bucket.

---

**<code>bucketDualStackDomainName</code>**
\`\`\`wing
bucketDualStackDomainName: str;
\`\`\`

- *Type:* <code>str</code>

The IPv6 DNS name of the specified bucket.

---

**<code>bucketName</code>**
\`\`\`wing
bucketName: str;
\`\`\`

- *Type:* <code>str</code>

The name of the bucket.

---

**<code>bucketRegionalDomainName</code>**
\`\`\`wing
bucketRegionalDomainName: str;
\`\`\`

- *Type:* <code>str</code>

The regional domain name of the specified bucket.

---

**<code>bucketWebsiteDomainName</code>**
\`\`\`wing
bucketWebsiteDomainName: str;
\`\`\`

- *Type:* <code>str</code>

The Domain name of the static website.

---

**<code>bucketWebsiteUrl</code>**
\`\`\`wing
bucketWebsiteUrl: str;
\`\`\`

- *Type:* <code>str</code>

The URL of the static website.

---

**<code>encryptionKey</code>**
\`\`\`wing
encryptionKey: IKey;
\`\`\`

- *Type:* <code><a href=\\"/packages/@aws-cdk/aws-kms/v/99.99.99/api/IKey?lang=python\\">IKey</a></code>

Optional KMS encryption key associated with this bucket.

---

**<code>isWebsite</code>**
\`\`\`wing
isWebsite: bool;
\`\`\`

- *Type:* <code>bool</code>

If this bucket has been configured for static website hosting.

---

**<code>policy</code>**
\`\`\`wing
policy: BucketPolicy;
\`\`\`

- *Type:* <code><a href=\\"/packages/@aws-cdk/aws-s3/v/99.99.99/api/BucketPolicy?lang=python\\">BucketPolicy</a></code>

The resource policy associated with this bucket.

If \`autoCreatePolicy\` is true, a \`BucketPolicy\` will be created upon the
first call to addToResourcePolicy(s).

---





"
`;

exports[`simple link formatter wing snapshot 1`] = `
"# construct-library

This is a test project to make sure the \`jsii-docgen\` cli property renders API documentation
for construct libraries.
# API Reference <a name=\\"API Reference\\" id=\\"api-reference\\"></a>

## Resources <a name=\\"Resources\\" id=\\"Resources\\"></a>

### GreeterBucket <a name=\\"GreeterBucket\\" id=\\"construct-library.GreeterBucket\\"></a>

#### Initializer <a name=\\"Initializer\\" id=\\"construct-library.GreeterBucket.Initializer\\"></a>

\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

new GreeterBucket(props?: BucketProps)
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>props</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.BucketProps\\">BucketProps</a></code> | *No description.* |

---

#### Methods <a name=\\"Methods\\" id=\\"Methods\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>applyRemovalPolicy</code> | Apply the given removal policy to this resource. |
| <code>addEventNotification</code> | Adds a bucket notification event destination. |
| <code>addObjectCreatedNotification</code> | Subscribes a destination to receive notifications when an object is created in the bucket. |
| <code>addObjectRemovedNotification</code> | Subscribes a destination to receive notifications when an object is removed from the bucket. |
| <code>addToResourcePolicy</code> | Adds a statement to the resource policy for a principal (i.e. account/role/service) to perform actions on this bucket and/or its contents. Use \`bucketArn\` and \`arnForObjects(keys)\` to obtain ARNs for this bucket or objects. |
| <code>arnForObjects</code> | Returns an ARN that represents all objects within the bucket that match the key pattern specified. |
| <code>grantDelete</code> | Grants s3:DeleteObject* permission to an IAM principal for objects in this bucket. |
| <code>grantPublicAccess</code> | Allows unrestricted access to objects from this bucket. |
| <code>grantPut</code> | Grants s3:PutObject* and s3:Abort* permissions for this bucket to an IAM principal. |
| <code>grantPutAcl</code> | Grant the given IAM identity permissions to modify the ACLs of objects in the given Bucket. |
| <code>grantRead</code> | Grant read permissions for this bucket and it's contents to an IAM principal (Role/Group/User). |
| <code>grantReadWrite</code> | Grants read/write permissions for this bucket and it's contents to an IAM principal (Role/Group/User). |
| <code>grantWrite</code> | Grant write permissions to this bucket to an IAM principal. |
| <code>onCloudTrailEvent</code> | Define a CloudWatch event that triggers when something happens to this repository. |
| <code>onCloudTrailPutObject</code> | Defines an AWS CloudWatch event that triggers when an object is uploaded to the specified paths (keys) in this bucket using the PutObject API call. |
| <code>onCloudTrailWriteObject</code> | Defines an AWS CloudWatch event that triggers when an object at the specified paths (keys) in this bucket are written to. |
| <code>s3UrlForObject</code> | The S3 URL of an S3 object. For example:. |
| <code>transferAccelerationUrlForObject</code> | The https Transfer Acceleration URL of an S3 object. |
| <code>urlForObject</code> | The https URL of an S3 object. Specify \`regional: false\` at the options for non-regional URLs. For example:. |
| <code>virtualHostedUrlForObject</code> | The virtual hosted-style URL of an S3 object. Specify \`regional: false\` at the options for non-regional URL. For example:. |
| <code>addCorsRule</code> | Adds a cross-origin access configuration for objects in an Amazon S3 bucket. |
| <code>addInventory</code> | Add an inventory configuration. |
| <code>addLifecycleRule</code> | Add a lifecycle rule to the bucket. |
| <code>addMetric</code> | Adds a metrics configuration for the CloudWatch request metrics from the bucket. |
| <code>greet</code> | *No description.* |

---

**<code>applyRemovalPolicy</code>**
\`\`\`wing
applyRemovalPolicy(policy: RemovalPolicy): void
\`\`\`

Apply the given removal policy to this resource.

The Removal Policy controls what happens to this resource when it stops
being managed by CloudFormation, either because you've removed it from the
CDK application or because you've made a change that requires the resource
to be replaced.

The resource can be deleted (\`RemovalPolicy.DESTROY\`), or left in your AWS
account for data recovery and cleanup later (\`RemovalPolicy.RETAIN\`).

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>policy</code> | <code><a href=\\"#custom-@aws-cdk/core.RemovalPolicy\\">RemovalPolicy</a></code> | *No description.* |

**<code>addEventNotification</code>**
\`\`\`wing
addEventNotification(event: EventType, dest: IBucketNotificationDestination, filters: NotificationKeyFilter): void
\`\`\`

Adds a bucket notification event destination.

> [https://docs.aws.amazon.com/AmazonS3/latest/dev/NotificationHowTo.html](https://docs.aws.amazon.com/AmazonS3/latest/dev/NotificationHowTo.html)

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>event</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.EventType\\">EventType</a></code> | The event to trigger the notification. |
| <code>dest</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.IBucketNotificationDestination\\">IBucketNotificationDestination</a></code> | The notification destination (Lambda, SNS Topic or SQS Queue). |
| <code>filters</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.NotificationKeyFilter\\">NotificationKeyFilter</a></code> | S3 object key filter rules to determine which objects trigger this event. |

*Example*

\`\`\`wing
   declare const myLambda: lambda.Function;
   const bucket = new s3.Bucket(this, 'MyBucket');
   bucket.addEventNotification(s3.EventType.OBJECT_CREATED, new s3n.LambdaDestination(myLambda), {prefix: 'home/myusername/*'});
\`\`\`


**<code>addObjectCreatedNotification</code>**
\`\`\`wing
addObjectCreatedNotification(dest: IBucketNotificationDestination, filters: NotificationKeyFilter): void
\`\`\`

Subscribes a destination to receive notifications when an object is created in the bucket.

This is identical to calling
\`onEvent(EventType.OBJECT_CREATED)\`.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>dest</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.IBucketNotificationDestination\\">IBucketNotificationDestination</a></code> | The notification destination (see onEvent). |
| <code>filters</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.NotificationKeyFilter\\">NotificationKeyFilter</a></code> | Filters (see onEvent). |

**<code>addObjectRemovedNotification</code>**
\`\`\`wing
addObjectRemovedNotification(dest: IBucketNotificationDestination, filters: NotificationKeyFilter): void
\`\`\`

Subscribes a destination to receive notifications when an object is removed from the bucket.

This is identical to calling
\`onEvent(EventType.OBJECT_REMOVED)\`.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>dest</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.IBucketNotificationDestination\\">IBucketNotificationDestination</a></code> | The notification destination (see onEvent). |
| <code>filters</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.NotificationKeyFilter\\">NotificationKeyFilter</a></code> | Filters (see onEvent). |

**<code>addToResourcePolicy</code>**
\`\`\`wing
addToResourcePolicy(permission: PolicyStatement): AddToResourcePolicyResult
\`\`\`

Adds a statement to the resource policy for a principal (i.e. account/role/service) to perform actions on this bucket and/or its contents. Use \`bucketArn\` and \`arnForObjects(keys)\` to obtain ARNs for this bucket or objects.

Note that the policy statement may or may not be added to the policy.
For example, when an \`IBucket\` is created from an existing bucket,
it's not possible to tell whether the bucket already has a policy
attached, let alone to re-use that policy to add more statements to it.
So it's safest to do nothing in these cases.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>permission</code> | <code><a href=\\"#custom-@aws-cdk/aws-iam.PolicyStatement\\">PolicyStatement</a></code> | the policy statement to be added to the bucket's policy. |

**<code>arnForObjects</code>**
\`\`\`wing
arnForObjects(keyPattern: str): str
\`\`\`

Returns an ARN that represents all objects within the bucket that match the key pattern specified.

To represent all keys, specify \`\`\\"*\\"\`\`.

If you need to specify a keyPattern with multiple components, concatenate them into a single string, e.g.:

   arnForObjects(\`home/\${team}/\${user}/*\`)

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>keyPattern</code> | <code>str</code> | *No description.* |

**<code>grantDelete</code>**
\`\`\`wing
grantDelete(identity: IGrantable, objectsKeyPattern?: any): Grant
\`\`\`

Grants s3:DeleteObject* permission to an IAM principal for objects in this bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"#custom-@aws-cdk/aws-iam.IGrantable\\">IGrantable</a></code> | The principal. |
| <code>objectsKeyPattern</code> | <code>any</code> | Restrict the permission to a certain key pattern (default '*'). |

**<code>grantPublicAccess</code>**
\`\`\`wing
grantPublicAccess(allowedActions: str, keyPrefix?: str): Grant
\`\`\`

Allows unrestricted access to objects from this bucket.

IMPORTANT: This permission allows anyone to perform actions on S3 objects
in this bucket, which is useful for when you configure your bucket as a
website and want everyone to be able to read objects in the bucket without
needing to authenticate.

Without arguments, this method will grant read (\\"s3:GetObject\\") access to
all objects (\\"*\\") in the bucket.

The method returns the \`iam.Grant\` object, which can then be modified
as needed. For example, you can add a condition that will restrict access only
to an IPv4 range like this:

     const grant = bucket.grantPublicAccess();
     grant.resourceStatement!.addCondition(‘IpAddress’, { “aws:SourceIp”: “54.240.143.0/24” });

Note that if this \`IBucket\` refers to an existing bucket, possibly not
managed by CloudFormation, this method will have no effect, since it's
impossible to modify the policy of an existing bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>allowedActions</code> | <code>str</code> | the set of S3 actions to allow. |
| <code>keyPrefix</code> | <code>str</code> | the prefix of S3 object keys (e.g. \`home/*\`). Default is \\"*\\". |

**<code>grantPut</code>**
\`\`\`wing
grantPut(identity: IGrantable, objectsKeyPattern?: any): Grant
\`\`\`

Grants s3:PutObject* and s3:Abort* permissions for this bucket to an IAM principal.

If encryption is used, permission to use the key to encrypt the contents
of written files will also be granted to the same principal.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"#custom-@aws-cdk/aws-iam.IGrantable\\">IGrantable</a></code> | The principal. |
| <code>objectsKeyPattern</code> | <code>any</code> | Restrict the permission to a certain key pattern (default '*'). |

**<code>grantPutAcl</code>**
\`\`\`wing
grantPutAcl(identity: IGrantable, objectsKeyPattern?: str): Grant
\`\`\`

Grant the given IAM identity permissions to modify the ACLs of objects in the given Bucket.

If your application has the '@aws-cdk/aws-s3:grantWriteWithoutAcl' feature flag set,
calling {@link grantWrite} or {@link grantReadWrite} no longer grants permissions to modify the ACLs of the objects;
in this case, if you need to modify object ACLs, call this method explicitly.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"#custom-@aws-cdk/aws-iam.IGrantable\\">IGrantable</a></code> | *No description.* |
| <code>objectsKeyPattern</code> | <code>str</code> | *No description.* |

**<code>grantRead</code>**
\`\`\`wing
grantRead(identity: IGrantable, objectsKeyPattern?: any): Grant
\`\`\`

Grant read permissions for this bucket and it's contents to an IAM principal (Role/Group/User).

If encryption is used, permission to use the key to decrypt the contents
of the bucket will also be granted to the same principal.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"#custom-@aws-cdk/aws-iam.IGrantable\\">IGrantable</a></code> | The principal. |
| <code>objectsKeyPattern</code> | <code>any</code> | Restrict the permission to a certain key pattern (default '*'). |

**<code>grantReadWrite</code>**
\`\`\`wing
grantReadWrite(identity: IGrantable, objectsKeyPattern?: any): Grant
\`\`\`

Grants read/write permissions for this bucket and it's contents to an IAM principal (Role/Group/User).

If an encryption key is used, permission to use the key for
encrypt/decrypt will also be granted.

Before CDK version 1.85.0, this method granted the \`s3:PutObject*\` permission that included \`s3:PutObjectAcl\`,
which could be used to grant read/write object access to IAM principals in other accounts.
If you want to get rid of that behavior, update your CDK version to 1.85.0 or later,
and make sure the \`@aws-cdk/aws-s3:grantWriteWithoutAcl\` feature flag is set to \`true\`
in the \`context\` key of your cdk.json file.
If you've already updated, but still need the principal to have permissions to modify the ACLs,
use the {@link grantPutAcl} method.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"#custom-@aws-cdk/aws-iam.IGrantable\\">IGrantable</a></code> | *No description.* |
| <code>objectsKeyPattern</code> | <code>any</code> | *No description.* |

**<code>grantWrite</code>**
\`\`\`wing
grantWrite(identity: IGrantable, objectsKeyPattern?: any): Grant
\`\`\`

Grant write permissions to this bucket to an IAM principal.

If encryption is used, permission to use the key to encrypt the contents
of written files will also be granted to the same principal.

Before CDK version 1.85.0, this method granted the \`s3:PutObject*\` permission that included \`s3:PutObjectAcl\`,
which could be used to grant read/write object access to IAM principals in other accounts.
If you want to get rid of that behavior, update your CDK version to 1.85.0 or later,
and make sure the \`@aws-cdk/aws-s3:grantWriteWithoutAcl\` feature flag is set to \`true\`
in the \`context\` key of your cdk.json file.
If you've already updated, but still need the principal to have permissions to modify the ACLs,
use the {@link grantPutAcl} method.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>identity</code> | <code><a href=\\"#custom-@aws-cdk/aws-iam.IGrantable\\">IGrantable</a></code> | *No description.* |
| <code>objectsKeyPattern</code> | <code>any</code> | *No description.* |

**<code>onCloudTrailEvent</code>**
\`\`\`wing
onCloudTrailEvent(options?: OnCloudTrailBucketEventOptions): Rule
\`\`\`

Define a CloudWatch event that triggers when something happens to this repository.

Requires that there exists at least one CloudTrail Trail in your account
that captures the event. This method will not create the Trail.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>options</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.OnCloudTrailBucketEventOptions\\">OnCloudTrailBucketEventOptions</a></code> | Options for adding the rule. |

**<code>onCloudTrailPutObject</code>**
\`\`\`wing
onCloudTrailPutObject(options?: OnCloudTrailBucketEventOptions): Rule
\`\`\`

Defines an AWS CloudWatch event that triggers when an object is uploaded to the specified paths (keys) in this bucket using the PutObject API call.

Note that some tools like \`aws s3 cp\` will automatically use either
PutObject or the multipart upload API depending on the file size,
so using \`onCloudTrailWriteObject\` may be preferable.

Requires that there exists at least one CloudTrail Trail in your account
that captures the event. This method will not create the Trail.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>options</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.OnCloudTrailBucketEventOptions\\">OnCloudTrailBucketEventOptions</a></code> | Options for adding the rule. |

**<code>onCloudTrailWriteObject</code>**
\`\`\`wing
onCloudTrailWriteObject(options?: OnCloudTrailBucketEventOptions): Rule
\`\`\`

Defines an AWS CloudWatch event that triggers when an object at the specified paths (keys) in this bucket are written to.

This includes
the events PutObject, CopyObject, and CompleteMultipartUpload.

Note that some tools like \`aws s3 cp\` will automatically use either
PutObject or the multipart upload API depending on the file size,
so using this method may be preferable to \`onCloudTrailPutObject\`.

Requires that there exists at least one CloudTrail Trail in your account
that captures the event. This method will not create the Trail.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>options</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.OnCloudTrailBucketEventOptions\\">OnCloudTrailBucketEventOptions</a></code> | Options for adding the rule. |

**<code>s3UrlForObject</code>**
\`\`\`wing
s3UrlForObject(key?: str): str
\`\`\`

The S3 URL of an S3 object. For example:.

\`s3://onlybucket\`
- \`s3://bucket/key\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>key</code> | <code>str</code> | The S3 key of the object. |

**<code>transferAccelerationUrlForObject</code>**
\`\`\`wing
transferAccelerationUrlForObject(key?: str, options?: TransferAccelerationUrlOptions): str
\`\`\`

The https Transfer Acceleration URL of an S3 object.

Specify \`dualStack: true\` at the options
for dual-stack endpoint (connect to the bucket over IPv6). For example:

- \`https://bucket.s3-accelerate.amazonaws.com\`
- \`https://bucket.s3-accelerate.amazonaws.com/key\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>key</code> | <code>str</code> | The S3 key of the object. |
| <code>options</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.TransferAccelerationUrlOptions\\">TransferAccelerationUrlOptions</a></code> | Options for generating URL. |

**<code>urlForObject</code>**
\`\`\`wing
urlForObject(key?: str): str
\`\`\`

The https URL of an S3 object. Specify \`regional: false\` at the options for non-regional URLs. For example:.

\`https://s3.us-west-1.amazonaws.com/onlybucket\`
- \`https://s3.us-west-1.amazonaws.com/bucket/key\`
- \`https://s3.cn-north-1.amazonaws.com.cn/china-bucket/mykey\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>key</code> | <code>str</code> | The S3 key of the object. |

**<code>virtualHostedUrlForObject</code>**
\`\`\`wing
virtualHostedUrlForObject(key?: str, options?: VirtualHostedStyleUrlOptions): str
\`\`\`

The virtual hosted-style URL of an S3 object. Specify \`regional: false\` at the options for non-regional URL. For example:.

\`https://only-bucket.s3.us-west-1.amazonaws.com\`
- \`https://bucket.s3.us-west-1.amazonaws.com/key\`
- \`https://bucket.s3.amazonaws.com/key\`
- \`https://china-bucket.s3.cn-north-1.amazonaws.com.cn/mykey\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>key</code> | <code>str</code> | The S3 key of the object. |
| <code>options</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.VirtualHostedStyleUrlOptions\\">VirtualHostedStyleUrlOptions</a></code> | Options for generating URL. |

**<code>addCorsRule</code>**
\`\`\`wing
addCorsRule(rule: CorsRule): void
\`\`\`

Adds a cross-origin access configuration for objects in an Amazon S3 bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>rule</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.CorsRule\\">CorsRule</a></code> | The CORS configuration rule to add. |

**<code>addInventory</code>**
\`\`\`wing
addInventory(inventory: Inventory): void
\`\`\`

Add an inventory configuration.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>inventory</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.Inventory\\">Inventory</a></code> | configuration to add. |

**<code>addLifecycleRule</code>**
\`\`\`wing
addLifecycleRule(rule: LifecycleRule): void
\`\`\`

Add a lifecycle rule to the bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>rule</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.LifecycleRule\\">LifecycleRule</a></code> | The rule to add. |

**<code>addMetric</code>**
\`\`\`wing
addMetric(metric: BucketMetrics): void
\`\`\`

Adds a metrics configuration for the CloudWatch request metrics from the bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>metric</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.BucketMetrics\\">BucketMetrics</a></code> | The metric configuration to add. |

**<code>greet</code>**
\`\`\`wing
greet(): void
\`\`\`

#### Static Methods <a name=\\"Static Methods\\" id=\\"Static Methods\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>isResource</code> | Check whether the given construct is a Resource. |
| <code>fromBucketArn</code> | *No description.* |
| <code>fromBucketAttributes</code> | Creates a Bucket construct that represents an external bucket. |
| <code>fromBucketName</code> | *No description.* |
| <code>validateBucketName</code> | Thrown an exception if the given bucket name is not valid. |

---

**<code>isResource</code>**
\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

GreeterBucket.isResource(construct: IConstruct)
\`\`\`

Check whether the given construct is a Resource.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>construct</code> | <code><a href=\\"#custom-@aws-cdk/core.IConstruct\\">IConstruct</a></code> | *No description.* |

**<code>fromBucketArn</code>**
\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

GreeterBucket.fromBucketArn(bucketArn: str)
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>bucketArn</code> | <code>str</code> | *No description.* |

**<code>fromBucketAttributes</code>**
\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

GreeterBucket.fromBucketAttributes(attrs: BucketAttributes)
\`\`\`

Creates a Bucket construct that represents an external bucket.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>attrs</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.BucketAttributes\\">BucketAttributes</a></code> | A \`BucketAttributes\` object. |

**<code>fromBucketName</code>**
\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

GreeterBucket.fromBucketName(bucketName: str)
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>bucketName</code> | <code>str</code> | *No description.* |

**<code>validateBucketName</code>**
\`\`\`wing
bring { GreeterBucket } from \\"construct-library\\"

GreeterBucket.validateBucketName(physicalName: str)
\`\`\`

Thrown an exception if the given bucket name is not valid.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>physicalName</code> | <code>str</code> | name of the bucket. |

#### Properties <a name=\\"Properties\\" id=\\"Properties\\"></a>

| **Property** | **Type** | **Description** |
| --- | --- | --- |
| <code>node</code> | <code><a href=\\"#custom-@aws-cdk/core.ConstructNode\\">ConstructNode</a></code> | The construct tree node associated with this construct. |
| <code>env</code> | <code><a href=\\"#custom-@aws-cdk/core.ResourceEnvironment\\">ResourceEnvironment</a></code> | The environment this resource belongs to. |
| <code>stack</code> | <code><a href=\\"#custom-@aws-cdk/core.Stack\\">Stack</a></code> | The stack in which this resource is defined. |
| <code>bucketArn</code> | <code>str</code> | The ARN of the bucket. |
| <code>bucketDomainName</code> | <code>str</code> | The IPv4 DNS name of the specified bucket. |
| <code>bucketDualStackDomainName</code> | <code>str</code> | The IPv6 DNS name of the specified bucket. |
| <code>bucketName</code> | <code>str</code> | The name of the bucket. |
| <code>bucketRegionalDomainName</code> | <code>str</code> | The regional domain name of the specified bucket. |
| <code>bucketWebsiteDomainName</code> | <code>str</code> | The Domain name of the static website. |
| <code>bucketWebsiteUrl</code> | <code>str</code> | The URL of the static website. |
| <code>encryptionKey</code> | <code><a href=\\"#custom-@aws-cdk/aws-kms.IKey\\">IKey</a></code> | Optional KMS encryption key associated with this bucket. |
| <code>isWebsite</code> | <code>bool</code> | If this bucket has been configured for static website hosting. |
| <code>policy</code> | <code><a href=\\"#custom-@aws-cdk/aws-s3.BucketPolicy\\">BucketPolicy</a></code> | The resource policy associated with this bucket. |

---

**<code>node</code>**
\`\`\`wing
node: ConstructNode;
\`\`\`

- *Type:* <code><a href=\\"#custom-@aws-cdk/core.ConstructNode\\">ConstructNode</a></code>

The construct tree node associated with this construct.

---

**<code>env</code>**
\`\`\`wing
env: ResourceEnvironment;
\`\`\`

- *Type:* <code><a href=\\"#custom-@aws-cdk/core.ResourceEnvironment\\">ResourceEnvironment</a></code>

The environment this resource belongs to.

For resources that are created and managed by the CDK
(generally, those created by creating new class instances like Role, Bucket, etc.),
this is always the same as the environment of the stack they belong to;
however, for imported resources
(those obtained from static methods like fromRoleArn, fromBucketName, etc.),
that might be different than the stack they were imported into.

---

**<code>stack</code>**
\`\`\`wing
stack: Stack;
\`\`\`

- *Type:* <code><a href=\\"#custom-@aws-cdk/core.Stack\\">Stack</a></code>

The stack in which this resource is defined.

---

**<code>bucketArn</code>**
\`\`\`wing
bucketArn: str;
\`\`\`

- *Type:* <code>str</code>

The ARN of the bucket.

---

**<code>bucketDomainName</code>**
\`\`\`wing
bucketDomainName: str;
\`\`\`

- *Type:* <code>str</code>

The IPv4 DNS name of the specified bucket.

---

**<code>bucketDualStackDomainName</code>**
\`\`\`wing
bucketDualStackDomainName: str;
\`\`\`

- *Type:* <code>str</code>

The IPv6 DNS name of the specified bucket.

---

**<code>bucketName</code>**
\`\`\`wing
bucketName: str;
\`\`\`

- *Type:* <code>str</code>

The name of the bucket.

---

**<code>bucketRegionalDomainName</code>**
\`\`\`wing
bucketRegionalDomainName: str;
\`\`\`

- *Type:* <code>str</code>

The regional domain name of the specified bucket.

---

**<code>bucketWebsiteDomainName</code>**
\`\`\`wing
bucketWebsiteDomainName: str;
\`\`\`

- *Type:* <code>str</code>

The Domain name of the static website.

---

**<code>bucketWebsiteUrl</code>**
\`\`\`wing
bucketWebsiteUrl: str;
\`\`\`

- *Type:* <code>str</code>

The URL of the static website.

---

**<code>encryptionKey</code>**
\`\`\`wing
encryptionKey: IKey;
\`\`\`

- *Type:* <code><a href=\\"#custom-@aws-cdk/aws-kms.IKey\\">IKey</a></code>

Optional KMS encryption key associated with this bucket.

---

**<code>isWebsite</code>**
\`\`\`wing
isWebsite: bool;
\`\`\`

- *Type:* <code>bool</code>

If this bucket has been configured for static website hosting.

---

**<code>policy</code>**
\`\`\`wing
policy: BucketPolicy;
\`\`\`

- *Type:* <code><a href=\\"#custom-@aws-cdk/aws-s3.BucketPolicy\\">BucketPolicy</a></code>

The resource policy associated with this bucket.

If \`autoCreatePolicy\` is true, a \`BucketPolicy\` will be created upon the
first call to addToResourcePolicy(s).

---





"
`;
